src/objects/Application_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_by_Panel_Coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted by Panel Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepted_by_Staff_Liaison__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted by Staff Liaison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application ID</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Application Feedback</relationshipLabel>
        <relationshipName>Application_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clarification_Questions__c</fullName>
        <label>Clarification Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expert_Review_Panel__c</fullName>
        <label>External Review Panel</label>
        <referenceTo>Expert_Review_Panel__c</referenceTo>
        <relationshipLabel>Application Feedback</relationshipLabel>
        <relationshipName>Application_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback_Comments__c</fullName>
        <label>Feedback Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Application__r.Organization__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>Application__r.Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Feedback (Panel Coordinator)</relationshipLabel>
        <relationshipName>Application_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Coordinator_new__c</fullName>
        <formula>Panel_Coordinator__r.FirstName &amp;&quot; &quot;&amp;Panel_Coordinator__r.LastName</formula>
        <label>Panel Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_ID__c</fullName>
        <formula>Expert_Review_Panel__r.Panel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Application__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Recommend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Recommend</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendations__c</fullName>
        <label>Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Liaison__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Liaison</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Feedback</relationshipLabel>
        <relationshipName>Application_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Liasion1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Liasion</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Liasion1_new__c</fullName>
        <formula>Staff_Liasion1__r.FirstName &amp;&quot; &quot;&amp;Staff_Liasion1__r.LastName</formula>
        <label>Staff Liasion1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In - Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted by CNCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <summarizedField>Feedback_questions__c.Weighted_Score__c</summarizedField>
        <summaryForeignKey>Feedback_questions__c.Application_Feedback__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>test_total_score__c</fullName>
        <formula>Total_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test total score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Application Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Panel_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
            <role>Expert_Reviewers</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Application Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>